tests/macros/raw_select/validate_on_key.rs
fn main() {
    let q = requestty::questions![RawSelect { validate_on_key: todo!() }];
}
